--- a/src/main/resources/templates/service_offer.html
+++ b/src/main/resources/templates/service_offer.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>O Nas</title>
+    <title>Nasza oferta</title>
 </head>
 <body>
 <script th:src="@{/js/bootstrap.js}"></script>
@@ -20,7 +20,7 @@
 <main>
     <div class="container my-5">
         <div>
-            Tu będzie krótka historia portu (skopiowana z wikipedii)
+            Tu będzie krótka tabela z ofertą portu
         </div>
     </div>
 </main>
