--- a/src/main/resources/templates/addShip.html
+++ b/src/main/resources/templates/addShip.html
@@ -7,11 +7,15 @@
 
 <!--    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <title>Dodaj przybycie statku do portu w Świnoujściu</title>
 </head>
 <body>
     <script th:src="@{/js/bootstrap.bundle.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <header>
         <div th:replace="~{/components/navbar::nav}"></div>
@@ -19,77 +23,88 @@
 
     <main>
         <div class="container">
-        <h1>Dodaj przybycie statku do portu w Świnoujściu</h1>
-        <form method="post" enctype="multipart/form-data" action="/addShip" th:object="${newShip}">
-            <div th:if="${successMessage}" class="success-message">
-                <p th:text="${successMessage}"></p>
-            </div>
-            <div th:if="${errorMessage}" class="error-message">
-                <p th:text="${errorMessage}"></p>
-            </div>
-            <div th:if="${duplicateArrivalError}">
-                <span class="error" id="error" th:text="${duplicateArrivalError}"></span>
-            </div>
+            <div class="container my-5">
+                <form method="post" enctype="multipart/form-data" action="/addShip" th:object="${newShip}">
+                    <div th:if="${successMessage}" class="success-message">
+                        <p th:text="${successMessage}"></p>
+                    </div>
+                    <div th:if="${errorMessage}" class="error-message">
+                        <p th:text="${errorMessage}"></p>
+                    </div>
+                    <div th:if="${duplicateArrivalError}">
+                        <span class="error" id="error" th:text="${duplicateArrivalError}"></span>
+                    </div>
 
-            <div>
-                <label for="arrivalDate">Data przybycia statku do portu</label>
-                <input type="date" id="arrivalDate" name="arrivalDate" required th:value="*{arrivalDate}">
-                <span class="error" th:if="${#fields.hasErrors('arrivalDate')}" th:errors="*{arrivalDate}"></span>
-            </div>
+                    <div class="my-3">
+                        <h1 class="text-center">Dodaj statek do systemu</h1>
+                    </div>
 
-            <div>
-                <label for="arrivalTime">Godzina przybycia statku do portu</label>
-                <input type="time" id="arrivalTime" name="arrivalTime" required th:field="*{arrivalTime}">
-                <span class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}"></span>
-            </div>
+                    <div>
+                        <label class="form-label" for="shipName">Nazwa statku</label>
+                        <input class="form-control" type="text" id="shipName" name="shipName" required th:field="*{shipName}">
+                        <span class="error" th:if="${#fields.hasErrors('shipName')}" th:errors="*{shipName}"></span>
+                    </div>
 
-            <div>
-                <label for="initialPortCode">Kod portu, z którego jednostka przybyła</label>
-                <input type="text" id="initialPortCode" name="initialPortCode" required th:field="*{initialPortCode}">
-                <span class="error" th:if="${#fields.hasErrors('initialPortCode')}" th:errors="*{initialPortCode}"></span>
-            </div>
+                    <div class="row">
+                        <div class="col my-3">
+                            <label class="form-label" for="arrivalDate">Data przybycia statku do portu</label>
+                            <input class="form-control" type="date" id="arrivalDate" name="arrivalDate" required th:value="*{arrivalDate}">
+                            <span class="error" th:if="${#fields.hasErrors('arrivalDate')}" th:errors="*{arrivalDate}"></span>
+                        </div>
 
-            <div>
-                <label for="shipName">Nazwa statku</label>
-                <input type="text" id="shipName" name="shipName" required th:field="*{shipName}">
-                <span class="error" th:if="${#fields.hasErrors('shipName')}" th:errors="*{shipName}"></span>
-            </div>
+                        <div class="col my-3">
+                            <label class="form-label" for="arrivalTime">Godzina przybycia statku do portu</label>
+                            <input class="form-control" type="time" id="arrivalTime" name="arrivalTime" required th:field="*{arrivalTime}">
+                            <span class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}"></span>
+                        </div>
+                    </div>
 
-            <div>
-                <label for="flag">Bandera</label>
-                <input type="text" id="flag" name="flag" required th:field="*{flag}">
-                <span class="error" th:if="${#fields.hasErrors('flag')}" th:errors="*{flag}"></span>
-            </div>
+                    <div class="row">
+                        <div class="col my-3">
+                            <label class="form-label" for="initialPortCode">Kod portu, z którego jednostka przybyła</label>
+                            <input class="form-control" type="text" id="initialPortCode" name="initialPortCode" required th:field="*{initialPortCode}">
+                            <span class="error" th:if="${#fields.hasErrors('initialPortCode')}" th:errors="*{initialPortCode}"></span>
+                        </div>
 
-            <div>
-                <label for="grossCapacity">Pojemność brutto</label>
-                <input type="number" id="grossCapacity" name="grossCapacity" step="any" min="0" required th:field="*{grossCapacity}">
-                <span class="error" th:if="${#fields.hasErrors('grossCapacity')}" th:errors="*{grossCapacity}"></span>
-            </div>
+                        <div class="col my-3">
+                            <label class="form-label" for="flag">Bandera</label>
+                            <input class="form-control" type="text" id="flag" name="flag" required th:field="*{flag}">
+                            <span class="error" th:if="${#fields.hasErrors('flag')}" th:errors="*{flag}"></span>
+                        </div>
+                    </div>
 
-            <div>
-                <label for="length">Długość</label>
-                <input type="number" id="length" name="length" step="any" min="0" required th:field="*{length}">
-                <span class="error" th:if="${#fields.hasErrors('length')}" th:errors="*{length}"></span>
-            </div>
+                    <div class="row">
+                        <div class="col my-3">
+                            <label class="form-label" for="grossCapacity">Pojemność brutto</label>
+                            <input class="form-control" type="number" id="grossCapacity" name="grossCapacity" step="any" min="0" required th:field="*{grossCapacity}">
+                            <span class="error" th:if="${#fields.hasErrors('grossCapacity')}" th:errors="*{grossCapacity}"></span>
+                        </div>
 
-            <div>
-                <label for="agent">Agent</label>
-                <input type="text" id="agent" name="agent" required th:field="*{agent}">
-                <span class="error" th:if="${#fields.hasErrors('agent')}" th:errors="*{agent}"></span>
-            </div>
+                        <div class="col my-3">
+                            <label class="form-label" for="length">Długość</label>
+                            <input class="form-control" type="number" id="length" name="length" step="any" min="0" required th:field="*{length}">
+                            <span class="error" th:if="${#fields.hasErrors('length')}" th:errors="*{length}"></span>
+                        </div>
+                    </div>
 
-            <div>
-                <label for="mooringPlace">Miejsce zacumowania</label>
-                <input type="text" id="mooringPlace" name="mooringPlace" required th:field="*{mooringPlace}">
-                <span class="error" th:if="${#fields.hasErrors('mooringPlace')}" th:errors="*{mooringPlace}"></span>
-            </div>
+                    <div class="my-3">
+                        <label class="form-label" for="agent">Agent</label>
+                        <input class="form-control" type="text" id="agent" name="agent" required th:field="*{agent}">
+                        <span class="error" th:if="${#fields.hasErrors('agent')}" th:errors="*{agent}"></span>
+                    </div>
 
-            <div>
-                <button type="submit">Dodaj</button>
-                <button type="reset">Resetuj</button>
+                    <div class="my-3">
+                        <label class="form-label" for="mooringPlace">Miejsce zacumowania</label>
+                        <input class="form-control" type="text" id="mooringPlace" name="mooringPlace" required th:field="*{mooringPlace}">
+                        <span class="error" th:if="${#fields.hasErrors('mooringPlace')}" th:errors="*{mooringPlace}"></span>
+                    </div>
+
+                    <div class="d-flex justify-content-center my-3">
+                        <button type="submit" class="btn btn-success m-3">Zapisz zmiany</button>
+                        <button type="reset" class="btn btn-danger m-3">Resetuj</button>
+                    </div>
+                </form>
             </div>
-        </form>
     </div>
     </main>
 
