--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    <title>O Nas</title>
+  <title>Kontakt</title>
 </head>
 <body>
 <script th:src="@{/js/bootstrap.js}"></script>
@@ -14,19 +14,19 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
 <header>
-    <div th:replace="~{/components/navbar::nav}"></div>
+  <div th:replace="~{/components/navbar::nav}"></div>
 </header>
 
 <main>
-    <div class="container my-5">
-        <div>
-            Tu będzie krótka historia portu (skopiowana z wikipedii)
-        </div>
+  <div class="container my-5">
+    <div>
+      Tu będzie kontakt z biurem portu
     </div>
+  </div>
 </main>
 
 <footer>
-    <div th:replace="~{/components/footer::ft}"></div>
+  <div th:replace="~{/components/footer::ft}"></div>
 </footer>
 </body>
 </html>
