--- a/src/main/resources/templates/placeholder.html
+++ b/src/main/resources/templates/placeholder.html
@@ -25,7 +25,7 @@
             <div class="card-header">
                 What are you looking for here?
             </div>
-            <img th:src="@{/img/placeholder.PNG}" class="card-img-top" alt="placeholder-img"/>
+            <img th:src="@{/img/placeholder.PNG}" class="card-img-top border-info border-3 rounded-3 p-3" alt="placeholder-img"/>
             <div class="card-body">
                 <h5 class="card-title">Witaj wędrowcze!</h5>
                 <p class="card-text">
@@ -49,8 +49,9 @@
                     </div>
                     <div class="card-body">
                         <blockquote class="blockquote mb-0">
-                            <p>Jak to jest być skrybą, dobrze?</p>
-                            <p>A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu, życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić... m— m-marchew...</p>
+                            <p class="lead">Jak to jest być skrybą, dobrze?</p>
+                            <p class="lead">A, wie pan, moim zdaniem to nie ma tak, że dobrze, albo że niedobrze. Gdybym miał powiedzieć, co cenię w życiu najbardziej, powiedziałbym, że ludzi. Ludzi, którzy podali mi pomocną dłoń, kiedy sobie nie radziłem, kiedy byłem sam, i co ciekawe, to właśnie przypadkowe spotkania wpływają na nasze życie. Chodzi o to, że kiedy wyznaje się pewne wartości, nawet pozornie uniwersalne, bywa, że nie znajduje się zrozumienia, które by tak rzec, które pomaga się nam rozwijać. Ja miałem szczęście, by tak rzec, ponieważ je znalazłem, i dziękuję życiu! Dziękuję mu, życie to śpiew, życie to taniec, życie to miłość! Wielu ludzi pyta mnie o to samo: ale jak ty to robisz, skąd czerpiesz tę radość? A ja odpowiadam, że to proste! To umiłowanie życia. To właśnie ono sprawia, że dzisiaj na przykład buduję maszyny, a jutro – kto wie? Dlaczego by nie – oddam się pracy społecznej i będę, ot, choćby, sadzić... m— m-marchew...</p>
+                            <br>
                             <footer class="blockquote-footer text-white">Otis ~ <cite title="Source Title">Asterix i Obelix - Misja Kleopatra ~ 2002</cite></footer>
                         </blockquote>
                     </div>
