--- a/src/main/resources/templates/show_all_ships.html
+++ b/src/main/resources/templates/show_all_ships.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8">
     <title>Statki</title>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
 </head>
 
 <body>
   <script th:src="@{/js/bootstrap.bundle.js}"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
   <header>
     <div th:replace="~{/components/navbar::nav}"></div>
   </header>
 
   <main>
-    <div class="container my-5">
-      <table class="table table-dark table-striped table-bordered table-hover">
+    <div class="container-fluid my-5">
+      <div class="m-3">
+        <div class="d-flex justify-content-center">
+          <h1 class="m-3 text-info">Tabela przypłynięc statków</h1>
+        </div>
+      <table class="table table-dark table-striped table-bordered border-info border-3 rounded table-hover">
         <thead>
         <tr>
           <th>Identyfikator</th>
@@ -48,6 +57,7 @@
         </tr>
         </tbody>
       </table>
+    </div>
     </div>
   </main>
 
