--- a/src/main/resources/templates/showArrivalShips.html
+++ b/src/main/resources/templates/showArrivalShips.html
@@ -61,6 +61,7 @@
                 <td th:text="${ship.arrivalTime}"></td>
                 <td th:text="${ship.mooringPlace}"></td>
                 <td><a th:href="@{'/showArrivalShips/' + ${ship.id}}"><button>Szczegóły</button></a></td>
+                <td><a th:href="@{'/portDetails/' + ${ship.initialPortCode}}" class="btn btn-primary">Port macierzysty</a></td>
                 <td th:if="${ship.user.getId() eq userId or isAdmin eq true}">
                     <a th:href="@{'/deleteShip/' + ${ship.id}}"><button>Usuń</button></a>
                     <a th:href="@{'/editShip/' + ${ship.id}}"><button>Edytuj</button></a>
