--- a/src/main/resources/templates/show_all_ships.html
+++ b/src/main/resources/templates/show_all_ships.html
@@ -63,7 +63,7 @@
             </div>
 
             <div th:if="${session['user_id'] != null}">
-              <a th:href="@{'/exportOne/' + ${ship.id}}" class="btn btn-primary">Wyeksportuj statek</a>
+              <a th:href="@{'/exportJsonOneShip/' + ${ship.id}}" class="btn btn-primary">Wyeksportuj statek do pliku JSON</a>
             </div>
 
             <div class="btn-group">
